--- a/index.html
+++ b/index.html
@@ -12,23 +12,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="Inreach.gg" />
+    <meta property="og:url" content="https://inreach.gg/" />
+    <meta property="og:title" content="Inreach" />
     <meta property="og:description" content="A data platform built for the next generation of creators." />
-    <meta
-      property="og:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
-    />
+    <meta property="og:image" content="/src/public/meta.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
-    <meta property="twitter:title" content="Inreach.gg" />
+    <meta property="twitter:url" content="https://inreach.gg/" />
+    <meta property="twitter:title" content="Inreach" />
     <meta property="twitter:description" content="A data platform built for the next generation of creators." />
-    <meta
-      property="twitter:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
-    />
+    <meta property="twitter:image" content="/src/public/meta.png" />
   </head>
   <body>
     <div id="root"></div>
