refactor: file structure
public and assets folders

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/public/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://inreach.gg/" />
     <meta property="og:title" content="Inreach" />
     <meta property="og:description" content="A data platform built for the next generation of creators." />
-    <meta property="og:image" content="/src/public/meta.png" />
+    <meta property="og:image" content="/meta.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://inreach.gg/" />
     <meta property="twitter:title" content="Inreach" />
     <meta property="twitter:description" content="A data platform built for the next generation of creators." />
-    <meta property="twitter:image" content="/src/public/meta.png" />
+    <meta property="twitter:image" content="/meta.png" />
   </head>
   <body>
     <div id="root"></div>
